5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4347/executions/1793_1595.log
== SUBMITION (2019-05-30 18:51:07) 
-- CODE:
from numpy import*
n=array(eval(input("nota dos alunos"))
h=0
t=0
while(size(n)>h):
	t=t+n[h]
	h=h+1
t=t-min(n)
t=t/size(n)
print(round(t,2))
	












-- EXECUTION TIME:
0.166035
-- ERROR:
  File "/home/codebench/codes/1793/1595/main.py", line 3
    h=0
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:51:10) 
-- CODE:
from numpy import*
n=array(eval(input("nota dos alunos"))
h=0
t=0
while(size(n)>h):
	t=t+n[h]
	h=h+1
t=t-min(n)
t=t/size(n)
print(round(t,2))
	












-- ERROR:
File "XXXX", line 3
    h=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:51:28) 
-- CODE:
from numpy import*
n=array(eval(input("nota dos alunos"))
h=0

t=0
while(size(n)>h):
	t=t+n[h]
	h=h+1
t=t-min(n)
t=t/size(n)
print(round(t,2))
	












-- ERROR:
File "XXXX", line 3
    h=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:51:36) 
-- CODE:
from numpy import*
n=array(eval(input("nota dos alunos"))
h=0
t=0
while(size(n)>h):
	t=t+n[h]
	h=h+1
t=t-min(n)
t=t/size(n)
print(round(t,2))
	












-- ERROR:
File "XXXX", line 3
    h=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:51:46) 
-- CODE:
from numpy import*
n=array(eval(input("nota dos alunos")))
h=0
t=0
while(size(n)>h):
	t=t+n[h]
	h=h+1
t=t-min(n)
t=t/size(n)
print(round(t,2))
	












-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:53:11) 
-- CODE:
from numpy import*
n=array(eval(input("nota dos alunos")))
h=0
t=0
while(size(n)>h):
	t=t+n[h]
	h=h+1
t=t-min(n)
t=t/size(n-1)
print(round(t,2))
	












-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:53:22) 
-- CODE:
from numpy import*
n=array(eval(input("nota dos alunos")))
h=0
t=0
while(size(n)>h):
	t=t+n[h]
	h=h+1
t=t-min(n)
t=t/size(n-1)
print(round(t,2))
	












-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:53:34) 
-- CODE:
from numpy import*
n=array(eval(input("nota dos alunos")))
h=0
t=0
while(size(n)>h):
	t=t+n[h]
	h=h+1
t=t-min(n)
t=t/size(n-1)
print(round(t,2))
	












-- EXECUTION TIME:
0.521472
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
2.6
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
1.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:53:36) 
-- CODE:
from numpy import*
n=array(eval(input("nota dos alunos")))
h=0
t=0
while(size(n)>h):
	t=t+n[h]
	h=h+1
t=t-min(n)
t=t/size(n-1)
print(round(t,2))
	












-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:54:01) 
-- CODE:
from numpy import*
n=array(eval(input("nota dos alunos")))
h=0
t=0
while(size(n)>h):
	t=t+n[h]
	h=h+1
t=t-min(n)
t=t/size(n-1)
print(round(t,2))
	












-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:54:55) 
-- CODE:
from numpy import*
n=array(eval(input("nota dos alunos")))
h=0
t=0
while(size(n)>h):
	t=t+n[h]
	h=h+1
t=t-min(n)
t=t/size(n-1)
y=y-1
t=t/y
print(round(t,2))
	












-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:55:29) 
-- CODE:
from numpy import*
n=array(eval(input("nota dos alunos")))
h=0
t=0
while(size(n)>h):
	t=t+n[h]
	h=h+1
t=t-min(n)
y=size(n)
y=y-1
t=t/y
print(round(t,2))
	












-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:55:38) 
-- CODE:
from numpy import*
n=array(eval(input("nota dos alunos")))
h=0
t=0
while(size(n)>h):
	t=t+n[h]
	h=h+1
t=t-min(n)
y=size(n)
y=y-1
t=t/y
print(round(t,2))
	












-- EXECUTION TIME:
0.430857
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:14:10) 
-- CODE:
from numpy import*
n=array(eval(input("nota dos alunos")))
h=0
t=0
while(size(n)>h):
	t=t+n[h]
	h=h+1
t=t-min(n)
y=size(n)
y=y-1
t=t/y
print(round(t,2))
	












-- EXECUTION TIME:
0.354872
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
